kubernetes/spack/mirror-spack-io/web/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mirror-spack-io-redirect
  namespace: spack
  labels:
    app: mirror-spack-io
    srv: web-redirect
spec:
  selector:
    matchLabels:
      app: mirror-spack-io
      srv: web-redirect
  replicas: 2
  template:
    metadata:
      labels:
        app: mirror-spack-io
        srv: web-redirect
    spec:
      containers:
      - name: web
        image: "schmunk42/nginx-redirect"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
      nodeSelector:
        "beta.kubernetes.io/instance-type": "t2.medium"
